Preferences: Network proxy port not always saved
Gnome Evolution > Menu > Preferences > Network Preferences
Change only a proxy port, don't change or click anywhere else, click close immediately after. The change is not saved.
Verify with (Debian 11):
# cat ~/.config/evolution/sources/system-proxy.source
Return in the Network Preferences and the port remains changed, but not saved to file.
Close evolution completely and reopen and the change was lost because it was not saved to file.
Workarounds: Clicking anywhere else or making other changes seems to activate an internal change flag that then saves correctly. Even when closing the preferences and reopening and only changing the port, changes are saved, seemingly once this change flag is activated for an evolution session.
# apt search evolution
evolution/testing,now 3.36.4-2 amd64 [installed]
On Debian 11, LXDE.