I#1054 - Preferences: Network proxy port not always saved

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1054